@@ -51,6 +51,7 @@
         <li>[Bugfix] Incompatibility with Mac OS X 10.6 (Snow Leopard) [<a href="http://trac.cyberduck.ch/ticket/3039">#3039</a>]
         </li>
         <li>[Feature] New application icon (Thanks to Dietmar Kerschner)</li>
+        <li>[Feature] Eucalyptus Walrus protocol support</li>
         <li class="removed">[Feature] AppleScript support</li>
         <li class="removed">[Feature] Dashboard Widget</li>
     </ul>
