@@ -10,6 +10,7 @@ Changelog. Last modified: $Date$
 3.3b1
 - [Bugfix] Incompatibility with Mac OS X 10.6 (Snow Leopard) [#3039]
 - [Feature] New application icon (Thanks to Dietmar Kerschner)
+- [Feature] Eucalyptus Walrus protocol support
 
 3.2.1
 - [Feature] Create placeholder objects for virtual directory (S3)
